# yara-x-parser

./: Cargo.toml  README.md  example.yar  rustfmt.toml  yara.ungram  yara_subset.grammar
.github/workflows/: code-health.yml
src/: bin.rs  lib.rs  main.rs
src/lexer/: mod.rs
src/parser/: event.rs  grammar.rs  mod.rs  parser.rs  syntax_kind.rs  syntaxkind.rs  token_set.rs
src/parser/grammar/: expressions.rs  items.rs
src/parser/grammar/expressions/: atom.rs
src/parser/syntax_kind/: generated.rs
src/syntax/: ast.rs  mod.rs  syntax_error.rs  syntax_node.rs  tests.rs  text_token_source.rs  text_tree_sink.rs
src/syntax/ast/: expr_ext.rs  generated.rs  mod.rs  operators.rs  traits.rs
src/syntax/tests/: ast_src.rs  sourcegen_ast.rs  tools.rs
tests/: test1.in  test1.out  test10.in  test10.out  test11.in  test11.out  test12.in  test12.out  test13.in  test13.out  test14.in  test14.out  test15.in  test15.out  test16.in  test16.out  test17.in  test17.out  test18.in  test18.out  test19.in  test19.out  test2.in  test2.out  test20.out  test21.in  test21.out  test22.out  test23.out  test24.in  test24.out  test25.in  test25.out  test26.out  test27.out  test28.in  test28.out  test29.in  test29.out  test3.out  (+78 more)
