[package]
name = "yara-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "yara_parser"
path = "src/lib.rs"

[[bin]]
name = "yara-parser"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
rowan-test = { git = "https://github.com/avast/avast-rowan.git" }
text-size = "1.1.1"
drop_bomb = "0.1.5"
ungrammar = "1.16.1"
itertools = "0.12.0"
xshell = "0.1"

[dev-dependencies]
goldenfile = "1.6.0"
globwalk = "0.9.1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
